--- a/_includes/block_slideshow_announcements.html
+++ b/_includes/block_slideshow_announcements.html
@@ -1,4 +1,4 @@
-<div id="announcements_block" class="block block_compact_fonts">
+<div id="announcements_block" class="block block_default_fonts">
 </div>
 
 <script>
