Make images in index page have a rounded border

--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -77,6 +77,9 @@ section.hub_column_main {
         div.right_container {
             border-top: none;
         }
+        img {
+            border-radius: 3px;
+        }
         margin-top: 10px;
         margin-bottom: 30px;
     }
