--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -242,13 +242,19 @@ table {
     }
 }
 
-sup {
-    font-size: $font_size_default - 2;
+// Prevent superscript and subscript from affecting line height
+sup, sub {
+    vertical-align: baseline;
+    position: relative;
+    top: -0.4em;
+}
 
+sub {
+    top: 0.4em;
+}
+
+sup {
     a {
-        font-family: $font_default;
-        font-size: $font_size_default - 3;
-        color: $color_text;
         border-bottom: none;
     }
     a::before {
@@ -259,38 +265,7 @@ sup {
     }
 }
 
-div.footnotes {
-    padding-top: 30px;
-    hr {
-        height: 1px;
-        width: 30%;
-        // Must be the same as paragraph separator vertical space
-        margin-bottom: 12px;
-    }
-    ol {
-        padding-left: 20px;
 
-        li,
-        li p,
-        li p a {
-            font-family: $font_default_thin;
-            font-size: $font_size_default - 1;
-        }
-
-        li {
-            p {
-                line-height: $font_size_default + 2;
-                margin-bottom: 0px;
-                a {
-                    border-bottom: none;
-                }
-            }
-            em {
-                font-size: $font_size_default - 1;
-            }
-        }
-    }
-}
 
 
 
