Add aside block style

--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -212,6 +212,105 @@ section.post_column_main {
         margin-bottom: 0;
     }
 
+    div.aside,
+    div.aside_right,
+    div.aside_left {
+        width: 35%;
+        padding: 5px 10px 5px 10px;
+
+        h1, h2, h3, h4, h5, h6 {
+            @include compact;
+        }
+
+        & > p,
+        & > p a {
+            margin: 0;
+            padding: 0;
+            font-family: $font_page_text;
+            font-size: $font_size_page_text + 1;
+            color: $color_aside_text;
+            line-height: $font_line_height_page_text + 1;
+        }
+
+        & > p.excerpt,
+        & > p.excerpt a {
+            margin-top: 0;
+            font-size: $font_size_page_text;
+            line-height: $font_line_height_page_text;
+            font-weight: bold;
+        }
+
+        & p:first-of-type,
+        & > a + p {
+            margin-top: 0;
+        }
+
+        h1.font_italic + p,
+        h2.font_italic + p,
+        h3.font_italic + p,
+        h4.font_italic + p,
+        h5.font_italic + p,
+        h6.font_italic + p,
+        p + p,
+        & div.video + p {
+            margin-top: 12px;
+        }
+
+        & > img,
+        & a > img {
+            width: 100%;
+        }
+
+        & > a {
+            border-bottom: none;
+        }
+
+        .font_bold {
+            font-weight: bold;
+        }
+        .font_italic {
+            font-style: italic;
+        }
+        .margin_top_20 {
+            //margin-top: 10px;
+        }
+    }
+
+    div.aside,
+    div.aside_right {
+        float: right;
+        margin-left: 10px;
+        border-right: 3px solid $color_aside_border;
+
+        h1, h2, h3, h4, h5, h6 {
+            text-align: right;
+        }
+
+        & > p,
+        & > p a {
+            text-align: right;
+        }
+    }
+
+    div.aside_left {
+        float: left;
+        margin-right: 10px;
+        border-left: 3px solid $color_aside_border;
+
+        h1, h2, h3, h4, h5, h6 {
+            text-align: left;
+        }
+
+        & > p,
+        & > p a {
+            text-align: left;
+        }
+    }
+
+    div.aside_width_45 {
+        width: 45%;
+    }
+
     table {
         width: 100%;
         overflow: scroll;
