--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -187,10 +187,10 @@ $font_footnote:                 $font_serif;
 $font_size_footnote:            $font_size_default;
 
 // Footer
-$font_footer:               $font_serif_thin;
-$font_size_footer:          $font_size_default;
-$font_size_license:         $font_size_default;
-$font_line_height_footer:   $font_line_height_default;
+$font_footer:                   $font_serif;
+$font_size_footer:              $font_size_default + 2;
+$font_size_license:             $font_size_default + 2;
+$font_line_height_footer:       $font_line_height_default;
 
 // Link buttons
 $font_button:                   $font_sans_thin;
