Add modal image popup style

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -103,6 +103,10 @@ $font_attribution:              $font_serif_thin;
 $font_size_attribution:         11px;
 $font_line_height_attribution:  10px;
 
+$font_caption:                  $font_serif_thin;
+$font_size_caption:             11px;
+$font_line_height_caption:      14px;
+
 // Label
 $font_label:                    $font_sans;
 $font_size_label:               11px;
