--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,6 +5,7 @@
 
 @import "slideshow";
 @import "block";
+@import "modal";
 
 @import "header";
 @import "footer";
@@ -422,12 +423,6 @@ section.column_right_sidebar {
         text-align: right;
     }
 }
-
-
-
-// -------------------------------------------------------------------------
-// Same for left/right sidebar
-// -------------------------------------------------------------------------
 
 
 
