Add video symbol in excerpt text

--- a/_includes/section_list.html
+++ b/_includes/section_list.html
@@ -18,7 +18,9 @@
         <div class="entry">
             <h2><a href="{{ post.url }}.html">{{ post.title }}</a></h2>
             <p class="date">{{ post.date | date: site.data.format.date_only }}</p>
-            <p class="excerpt">{{ post.excerpt }}</p>
+            <p class="excerpt">
+                {{ post.excerpt }}{% if post.video.source != nil %} <i class="fa fa-video-camera" aria-hidden="true"></i>{% endif %}
+            </p>
         </div>
             {% assign postCount = postCount | plus: 1 %}
             {% if postCount == include.max_count %}
