--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -69,7 +69,7 @@ section.post_column_main {
         line-height: $font_line_height_page_text + 12;
 
         @include max-screen(720px) {
-            @include set_font($font_page_text, $font_size_page_text, $color_page_text);
+            @include set_font($font_page_text, $font_size_page_text + 2, $color_page_text);
             line-height: $font_line_height_page_text + 4;
         }
         @media print {
@@ -106,7 +106,7 @@ section.post_column_main {
         font-family: $font_footnote_link;
         font-size: $font_size_footnote_link;
         @include min-screen(720px + 1px) { font-size: $font_size_default_thin; }
-        @include max-screen(720px) { font-size: $font_size_default_thin; }
+        @include max-screen(720px) { font-size: $font_size_default_thin - 1; }
         line-height: $font_size_footnote_link;
         //font-weight: bold;
         color: $color_footnote_link;
@@ -486,25 +486,28 @@ section.post_column_main {
     blockquote {
         border-left: 6px solid $color_blockquote_bar;
         margin: 12px 0 12px 30px;
+        @include max-screen(720px) {
+            margin-left: 15px;
+        }
         padding: 10px 12px 2px 12px;
         border-radius: 0 4px 4px 0;
         width: 80%;
         background: $color_blockquote_bg;
 
         p, a, li {
-            @include set_font($font_blockquote, $font_size_blockquote, $color_blockquote);
-            line-height: $font_line_height_blockquote;
-            word-spacing: $word_spacing_blockquote;
+            @include set_font($font_blockquote, $font_size_blockquote + 4, $color_blockquote);
+            line-height: $font_size_blockquote + 12;
 
-            @include min-screen(720px + 1px) {
-                @include set_font($font_blockquote, $font_size_blockquote + 4, $color_blockquote);
-                line-height: $font_size_blockquote + 12;
+            @include max-screen(720px) {
+                @include set_font($font_blockquote, $font_size_blockquote + 2, $color_blockquote);
+                line-height: $font_line_height_blockquote + 2;
             }
             @media print {
                 @include set_font($font_blockquote, $font_size_blockquote + 4, $color_blockquote);
                 line-height: $font_size_blockquote + 12;
             }
 
+            word-spacing: $word_spacing_blockquote;
             margin-bottom: 8px;
 
             e {
