--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,8 @@
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@dutertetimes" />
+    <meta name="twitter:creator" content="@dutertetimes" />
+    <meta name="twitter:url" content="{{ page.url }}" />
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page.excerpt }}" />
     {% if page.image.source != nil %}
