--- a/_includes/section_list.html
+++ b/_includes/section_list.html
@@ -1,3 +1,12 @@
+{% comment %}
+Arguments:
+    - category
+    - max_count
+    
+Example:
+    {% include section_list.html category="criminality" max_count=3 %}
+{% endcomment %}
+
 {% assign postCount = 0 %}
 {% for post in site.categories[include.category] %}
     {% if post.categories contains 'top' or post.categories contains 'headline' %}
