--- a/_includes/section_slideshow.html
+++ b/_includes/section_slideshow.html
@@ -1,5 +1,14 @@
+{% comment %}
+Arguments:
+    - category - every word is capitalized because it is also used in javascript
+    - post_count
+    - posts
+    
+Example:
+    {% assign section_posts = site.categories['criminality'] %}
+    {% include section_slideshow.html category="Criminality" post_count=section_posts.size posts=section_posts %}
 {% assign posts = "" | split: "" %}
-{% assign post_count = 0 %}
+{% endcomment %}
 
 {% if include.category == 'Headline' %}
     {% for post in include.posts %}
