Update dropdown menu label

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -7,7 +7,7 @@
         <li class="dropdown">
             <span>News&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i></span>
             <div class="dropdown_content">
-                <a href="/news/headline/">Headlines</a>
+                <a href="/news/headline/">President</a>
                 <a href="/news/criminality/">Criminality</a>
                 <a href="/news/peace/">Peace Process</a>
                 <a href="/news/agrarian/">Agrarian</a>
