--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,9 @@
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page.excerpt }}" />
     {% if page.image.source != nil %}
-    <meta name="twitter:image:src" content="{{ site.url }}{{ page.image.source }}" />
+    <meta name="twitter:image:src" content="{{ site.image_source }}{{ page.image.source }}" />
+    {% elsif page.categories contains 'agriculture' %}
+    <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_agri.png" />
     {% else %}
     <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_01.png" />
     {% endif %}
