Try updating twitter card image
This method of appending some 'argument' to the image url is said
to update the image as suggested from the twitter site.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,7 @@
     {% elsif page.categories contains 'agriculture' %}
     <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_agri.png" />
     {% else %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_01.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_01.png?1234567890" />
     {% endif %}
 
     <!-- Stylesheets -->
