--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -1,3 +1,10 @@
+div.top_margin_20 {
+    padding-top: 15px;
+}
+
+div.bottom_margin_20 {
+    padding-bottom: 20px;
+}
 
 section.hub_column_main {
     @media print {
@@ -33,8 +40,6 @@ section.hub_column_main {
                 display: flex;
                 flex-direction: column;
             }
-            
-            border-top: 1px solid $color_primary;
 
             & > img {
                 display: block;
@@ -44,33 +49,25 @@ section.hub_column_main {
             }
         }
 
+        div.left_container {
+            margin-right: 10px;
+            @include max-screen(1024px) {
+                margin-right: 0;
+            }
+        }
+        
         div.right_container {
             margin-left: 10px;
             @include max-screen(1024px) {
                 margin-left: 0;
             }
         }
+        
+        div.border_line {
+            border-top: 1px solid $color_primary;
+        }
 
         // Contents are displayed in div.block
-/*
-        div.block {
-            background: $color_main_bg;
-        }
-
-        div.block + div.block {
-            // No padding at the top
-            // Less vertical spacing between the slider and list blocks
-            padding: 0 10px 10px 10px;
-            background: $color_news_background;
-            border-radius: 3px;
-            border: 1px solid $color_news_line;
-            flex: 1;
-
-            & > div.entries {
-                margin-bottom: 0 !important;
-            }
-        }
-*/
     }
     
     div.container_border {
@@ -90,5 +87,28 @@ section.hub_column_main {
         }
         margin-top: 10px;
         margin-bottom: 30px;
+    }
+    
+    // Intentionally placed after div.section_container
+    // so styles can be overriden
+    div.section_latest_container {
+        margin-top: 10px;
+        
+        h1 {
+            font-family: $font_label;
+            font-size: $font_size_label;
+            @include max-screen(720px) {
+                font-size: $font_size_label + 1;
+            }
+            font-weight: bold;
+            color: $color_sidebar_label;
+            text-align: left;
+            text-transform: uppercase;
+            letter-spacing: 0.25px;
+            margin: 0;
+            padding-top: 1px;
+            float: left;
+            display: inline-block;
+        }
     }
 }
