--- a/_includes/block_weather_satellite.html
+++ b/_includes/block_weather_satellite.html
@@ -1,17 +1,21 @@
 {% comment %}
 http://www.goes.noaa.gov/sohemi/
 {% endcomment %}
-<div id="weather_block" class="block block_default_fonts">
-    <h1>Satellite Image</h1>
-    <div class="entries">
-        <div class="entry">
-            <div class="image">
-                {% if site.development == true %}
-                <img src="/images/public/philir.jpg" width="100%" height="auto"/>
-                {% else %}
-                <img src="{{ site.data.links.weather_satellite_image }}"/>
-                {% endif %}
-                <p class="attribution">Data from Himawari-8 via PAGASA&nbsp;</p>
+
+<div id="weather_section_container" class="section_container_wrapper section_container_wrapper_border">
+    <h1>Weather</h1>
+    <div id="weather_block" class="block block_margin_top block_default_fonts">
+        <h1>Satellite Image</h1>
+        <div class="entries">
+            <div class="entry">
+                <div class="image">
+                    {% if site.development == true %}
+                    <img src="/images/public/philir.jpg" width="100%" height="auto"/>
+                    {% else %}
+                    <img src="{{ site.data.links.weather_satellite_image }}"/>
+                    {% endif %}
+                    <p class="attribution">Data from Himawari-8 via PAGASA&nbsp;</p>
+                </div>
             </div>
         </div>
     </div>
