--- a/_sass/weather.scss
+++ b/_sass/weather.scss
@@ -1,6 +1,21 @@
+#weather_section_container {
+    @include min-screen(720px + 1px) {
+        border-top: none;
+        & > h1 {
+            display: none;
+        }
+        // Overrides the div.section_container_wrapper setting
+        margin-top: 0px !important;
+    }
+}
+
 #weather_block {
     @media print {
         display: none;
+    }
+
+    @include max-screen(720px) {
+        margin-top: 20px;
     }
 
     div.image {
