Update datetime display

--- a/_includes/block_datetime.html
+++ b/_includes/block_datetime.html
@@ -1,4 +1,4 @@
-<div id="datetime_block" class="block">
+<div id="datetime_block" class="block block_margin_top">
     <h1>Date and Time</h1>
     <div class="entries">
         <div class="entry">
