Rephrase Recent News to Recent Events

--- a/_includes/post_recent.html
+++ b/_includes/post_recent.html
@@ -1,5 +1,5 @@
 <div id="recent_posts_block" class="block block_default_fonts">
-    <h1>Recent News</h1><div class="right_filler">&nbsp;</div>
+    <h1>Recent Events</h1><div class="right_filler">&nbsp;</div>
     {% comment %}
     The following div uses an id for use in the script below which
     requires a unique id. Otherwise, the html content previously
