--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -1,5 +1,5 @@
 <div id="related_posts_block" class="block block_default_fonts">
-    <h1>Related News</h1><div class="right_filler">&nbsp;</div>
+    <h1>Related Events</h1><div class="right_filler">&nbsp;</div>
     <div class="entries">
         {% comment %}
         <!-- The following code snippet was taken from http://zhangwenli.com -->
