--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -1,11 +1,3 @@
-div.top_margin_20 {
-    padding-top: 15px;
-}
-
-div.bottom_margin_20 {
-    padding-bottom: 20px;
-}
-
 section.hub_column_main {
     @media print {
         margin-left: 0;
@@ -13,102 +5,123 @@ section.hub_column_main {
     @include max-screen(1024px) {
         margin-top: 10px;
     }
+}
 
-    div.image_container,
-    div.section_container {
+// Intentionally placed after div.section_container
+// so styles can be overridden
+div.section_container_wrapper {
+    margin-top: 10px;
+    float: left;
+
+    & > h1 {
+        font-family: $font_label;
+        font-size: $font_size_label;
+        @include max-screen(720px) {
+            font-size: $font_size_label + 1;
+        }
+        font-weight: bold;
+        color: $color_main_bg;
+        background: $color_sidebar_label;
+        text-align: left;
+        text-transform: uppercase;
+        letter-spacing: 0.25px;
+        margin: 0;
         float: left;
-        width: 100%;
+        display: inline-block;
+    }
+
+    // Title background
+    & > h1 {
+        padding: 4px 11px 4px 10px;
+    }
+}
+
+div.section_container_wrapper_border {
+    border-top: 1px solid $color_primary;
+}
+
+
+
+div.image_container,
+div.section_container {
+    float: left;
+    width: 100%;
+
+    @include min-screen(1024px + 1px) {
+        margin-bottom: 0;
+        display: flex;
+        flex-direction: row;
+    }
+
+    div.left_container,
+    div.right_container {
+        float: left;
+
+        @include max-screen(1024px) {
+            width: 100%;
+        }
 
         @include min-screen(1024px + 1px) {
-            margin-bottom: 0;
+            width: calc(50% - 5px);
+            flex: 1;
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
         }
 
-        div.left_container,
-        div.right_container {
-            float: left;
-
-            @include max-screen(1024px) {
-                width: 100%;
-                margin-bottom: 15px;
-            }
-
-            @include min-screen(1024px + 1px) {
-                width: calc(50% - 5px);
-                flex: 1;
-                display: flex;
-                flex-direction: column;
-            }
-
-            & > img {
-                display: block;
-                max-width: calc(100% - 1px);
-                width: auto;
-                height: auto;
-            }
+        & > img {
+            display: block;
+            max-width: calc(100% - 1px);
+            width: auto;
+            height: auto;
         }
-
-        div.left_container {
-            margin-right: 10px;
-            @include max-screen(1024px) {
-                margin-right: 0;
-            }
-        }
-        
-        div.right_container {
-            margin-left: 10px;
-            @include max-screen(1024px) {
-                margin-left: 0;
-            }
-        }
-        
-        div.border_line {
-            border-top: 1px solid $color_primary;
-        }
-
-        // Contents are displayed in div.block
     }
-    
-    div.container_border {
+
+    div.left_container {
+        margin-right: 10px;
+        @include max-screen(1024px) {
+            margin-right: 0;
+        }
+    }
+
+    div.right_container {
+        margin-left: 10px;
+        @include max-screen(1024px) {
+            margin-left: 0;
+        }
+    }
+
+    div.container_border_thin {
+        border-top: 1px solid $color_primary;
         @include min-screen(1024px + 1px) {
-            margin-bottom: 15px;
+            padding-top: 10px;
         }
-        border-top: 3px solid $color_primary;
     }
 
-    div.image_container {
-        div.left_container,
-        div.right_container {
-            border-top: none;
-        }
-        img {
-            border-radius: 3px;
-        }
-        margin-top: 10px;
-        margin-bottom: 30px;
+    // Contents are displayed in div.block
+}
+
+div.container_top_margin {
+    margin-top: 20px;
+}
+
+div.container_bottom_margin {
+    @include min-screen(1024px + 1px) {
+        padding-bottom: 5px;
     }
-    
-    // Intentionally placed after div.section_container
-    // so styles can be overriden
-    div.section_latest_container {
-        margin-top: 10px;
-        
-        h1 {
-            font-family: $font_label;
-            font-size: $font_size_label;
-            @include max-screen(720px) {
-                font-size: $font_size_label + 1;
-            }
-            font-weight: bold;
-            color: $color_sidebar_label;
-            text-align: left;
-            text-transform: uppercase;
-            letter-spacing: 0.25px;
-            margin: 0;
-            padding-top: 1px;
-            float: left;
-            display: inline-block;
-        }
+    @include max-screen(1024px) {
+        padding-bottom: 5px;
+        padding-bottom: 0px;
     }
+}
+
+div.image_container {
+    div.left_container,
+    div.right_container {
+        border-top: none;
+    }
+    img {
+        border-radius: 3px;
+    }
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
