--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -150,7 +150,10 @@ section.post_column_main {
     }
 
     div.video_container ~ p {
-        padding-top: 10px;
+        padding-top: 0px;
+    }
+    div.video_container + p {
+        padding-top: 15px;
     }
     table ~ p {
         margin-top: 12px;
@@ -596,5 +599,9 @@ section.post_column_main {
 #recent_posts_block {
     @media print {
         display: none;
+    }
+
+    @include max-screen(720px) {
+        margin-top: 20px;
     }
 }
