Update button font

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -197,5 +197,5 @@ $font_size_license:             $font_size_default + 2;
 $font_line_height_footer:       $font_line_height_default;
 
 // Link buttons
-$font_button:                   $font_sans_thin;
+$font_button:                   $font_sans;
 $font_size_button:              13px;
