--- a/_includes/post_entry_latest.html
+++ b/_includes/post_entry_latest.html
@@ -3,14 +3,14 @@ Argument(s):
     - post
 {% endcomment %}
 
-        <div class="entry">
+        <div class="entry entry_highlight">
             <h2><a href="{{ include.post.url }}.html">{{ include.post.title }}</a></h2>
             
             {% if include.post.image.source %}
             <img src="{{ site.image_source }}{{ post.image.source }}"  class="thumbnail img_style_rounded"/>
             {% else %}
                 {% if include.post.video.source %}
-            <img src="http://img.youtube.com/vi/{{ include.post.video.source }}/mqdefault.jpg" class="video_thumbnail img_style_rounded"/>
+            <img src="http://img.youtube.com/vi/{{ include.post.video.source }}/mqdefault.jpg" class="video_thumbnail_latest img_style_rounded"/>
                 {% else %}
             <img src="{{ site.image_source }}{{ include.post_image }}" class="thumbnail img_style_rounded"/>
                 {% endif %}
