--- a/_includes/section_slideshow_others.html
+++ b/_includes/section_slideshow_others.html
@@ -1,7 +1,6 @@
 {% comment %}
 Arguments:
     - category - every word is capitalized because it is also used in javascript
-    - post_count
     - posts
     - post_image
     
@@ -11,64 +10,21 @@ Example:
 {% assign posts = "" | split: "" %}
 {% endcomment %}
 
-{% comment %}
-{% assign posts = include.posts %}
-
-{% assign post_count = include.post_count %}
+{% assign post_count = include.posts.size %}
 {% if post_count > 7 %}
-    {% assign post_count = 7 %}
+{% assign post_count = 7 %}
 {% endif %}
-
-
-{% assign post_count = 0 %}
-{% for post in include.posts %}
-    {% if post_count == 0 %}
-        {% assign post_count = post_count | plus: 1 %}
-        {% continue %}
-    {% endif %}
-    
-    {% assign posts = posts | push: post %}
-    
-    {% assign post_count = post_count | plus: 1 %}
-    {% if post_count == 8 %}
-        {% break %}
-    {% endif %}
-{% endfor %}
-
-{% endcomment %}
-
-{% comment %}
-{% if include.category == 'Headline' %}
-    {% for post in include.posts %}
-        {% assign posts = posts | push: post %}
-        {% assign post_count = post_count | plus: 1 %}
-        {% if post_count == 7 %}
-            {% break %}
-        {% endif %}
-    {% endfor %}
-{% else %}
-    {% for post in include.posts %}
-        {% if post.categories contains 'top' %}
-            {% assign posts = posts | push: post %}
-            {% assign post_count = post_count | plus: 1 %}
-            {% if post_count == 7 %}
-                {% break %}
-            {% endif %}
-        {% endif %}
-    {% endfor %}
-{% endif %}
-{% endcomment %}
 
 <div class="block block_default_fonts">
     <h1>{{ include.category }}</h1>
     <div class="links headline_links">
-        {% for i in (1..7) %}
+        {% for i in (1..post_count) %}
         <span class="{{ include.category | replace: ' ', '_' | downcase }}_dot slideshow_dot" onclick="current{{ include.category | remove: ' ' }}Slide({{ i | minus: 1 }})"></span>
         {% endfor %}
     </div>
     <div class="entries">
     
-        {% for post in include.posts limit:7 offset:1 %}
+        {% for post in include.posts limit:7 %}
            
         <div class="entry {{ include.category | replace: ' ', '_' | downcase }}_news_entry">
             <h2><a href="{{ post.url }}.html">{{ post.title }}</a></h2>
@@ -88,8 +44,7 @@ Example:
                 {{ post.excerpt }}{% if post.video.source %} <i class="fa fa-video-camera" aria-hidden="true"></i>{% endif %}
             </p>
         </div>
-        
-   
+
         {% else %}
         <p class="no_entries">There are no posts for this section.</p>
         {% endfor %}
