--- a/_sass/block.scss
+++ b/_sass/block.scss
@@ -53,28 +53,44 @@ div.block {
                     @include attribution;
                 }
             }
-            
+
+            img {
+                float: left;
+                margin-top: 3px;
+                border-radius: 3px;
+            }
+
             img.thumbnail {
                 width: 70px;
                 height: 70px;
                 @include max-screen(720px) {
                     width: 70px;
+                    //width: 45%;
+                    //height: 45%;
                 }
-                float: left;
-                margin-top: 3px;
                 margin-right: 10px;
-                border-radius: 3px;
             }
             
             img.video_thumbnail {
                 height: 60px;
                 @include max-screen(720px) {
                     height: 60px;
+                    width: 45%;
+                    height: 45%;
                 }
-                float: left;
-                margin-top: 3px;
                 margin-right: 10px;
-                border-radius: 3px;
+            }
+
+            img.video_thumbnail_latest {
+                width: 244px;
+                width: 254px;
+                height: 137px;
+                height: 143px;
+                @include max-screen(720px) {
+                    width: 100%;
+                    height: 100%;
+                }
+                margin-bottom: 10px;
             }
             
             p {
@@ -128,6 +144,14 @@ div.block {
 
 div.block_margin_top {
     margin-top: 10px;
+}
+
+div.block_margin_bottom {
+    margin-bottom: 0px;
+}
+
+img.block_margin_right {
+    margin-right: 10px;
 }
 
 
