--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,12 +42,28 @@
     <meta name="twitter:url" content="{{ page.url }}" />
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page.excerpt }}" />
-    {% if page.image.source != nil %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}{{ page.image.source }}" />
-    {% elsif page.categories contains 'agriculture' %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_agri.png" />
+    {% if page.image.source %}
+    <meta name="twitter:image:src" content="{{ site.url }}{{ page.image.source }}" />
+    {% elsif post.video.source %}
+    <meta name="twitter:image:src" content="http://img.youtube.com/vi/{{ post.video.source }}/mqdefault.jpg" />
+    {% elsif page.tags contains 'president' %}
+    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_president.png" />
+    {% elsif page.categories contains 'criminality' %}
+    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_crime.png" />
+    {% elsif page.categories contains 'agrarian' %}
+    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_agrarian.png" />
+    {% elsif page.categories contains 'environment' %}
+    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_env.png" />
+    {% elsif page.categories contains 'foreign affairs' %}
+    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_foreign.png" />
+    {% elsif page.categories contains 'business' %}
+    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_business.png" />
+    {% elsif page.categories contains 'peace process' %}
+    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_peace.png" />
+    {% elsif page.categories contains 'opinion' %}
+    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_opinion.png" />
     {% else %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_01.png?1234567890" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_01.png" />
     {% endif %}
 
     <!-- Stylesheets -->
